--- a/profile/profile.html
+++ b/profile/profile.html
@@ -12,35 +12,51 @@
 
 <br>
 
-<body>
-
-    <!--------------header-------------->
+    <!--navbar-->
     <header>
-        <h1>Zion Wong<i class="fa fa-linkedin-square" aria-hidden="true" style="font-size:30px;"></i></a> </h1>
+        <h1>Zion Wong</h1>
+
         <nav>
             <ul class="nav_links">
-                <li><a href="/resume-website">about me</a></li>
-                <li><a href="/resume-website#skills">skills</a></li>
-                <li><a href="/resume-website#work">my work</a></li>
+                <li> <a href="/resume-website/"> <nav_color>   Home Page  </nav_color> </a> </li>
             </ul>
         </nav>
     </header>
+    <br>
 
     <h1>Profile Photo</h1>
     <br>
 
     <!--https://stackoverflow.com/questions/39094612/css-to-display-divs-in-row-and-cols-->
     <div class="row">
-        <div class="profile">
+
+        <div class="one_profile">
+            <li><nav_color href="#">Photo before 2019</nav_color></li>
+        </div>
+
+        <div class="one_profile">
             <img src="/resume-website/images/profile/2019_profile.png" style="width:150px;height:200px;"> </br>
              2019
         </div>
-        <div class="profile">
+        <div class="one_profile">
             <img src="/resume-website/images/profile/2020_profile.jpg" style="width:150px;height:200px;"> </br>
              2020
         </div>
     </div>
 
+
+
+
+    <div class="cb">
+        <br>
+        <br>
+        <br>
+        <hr>
+        <h1>Connect Me in Socail Network</h1>
+        <a href="https://www.linkedin.com/in/zion-wong24/"> <i class="fa fa-linkedin-square" style="font-size:50px; color:white;"></i> </a>
+        <a href="https://www.youtube.com/channel/UCK1EVyeYdV-c_DTNviA5_cA"> <i class="fa fa-youtube" aria-hidden="true" style="font-size:50px; color:white;"></i> </a>
+        <a href="https://github.com/zionnoizy"> <i class="fa fa-github" aria-hidden="true" style="font-size:50px; color:white;"></i> </a>
+    </div>
 
 
 </body>
