--- a/index.html
+++ b/index.html
@@ -5,34 +5,45 @@
     <meta name="viewpoint" content="width-device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/base.css">
+    <link rel="stylesheet" type="text/css" href="css/header.css">
     <script src="js/progress_bar.js" defer></script>
     <script src="js/message_box.js" defer></script>
     <script> document.createElement("stack"); </script>
+    <link rel="stylesheet" href="css/bootstrap5.2/bootstrap-grid.min.css">
     <title> Zion Portfolio </title>
 </head>
 
-<body>
+<body class="bg-dark text-white">
 
     <!--navbar-->
-    <header>
-        <h1>Zion Wong<i class="fa fa-linkedin-square" aria-hidden="true" style="font-size:30px;"></i></a> </h1>
+    <header class="">
 
-        <nav>
-            <ul class="nav_links">
-                <!--<li class="nav-item active"><a href="#about">About Me</a></li>-->
-                <!--<li><a href="#skills">Skills</a></li>-->
-                <!--<li><a href="#work">My work</a></li>-->
-                <li> <a href="profile/profile.html"> <nav_color>   Profile Photo  </nav_color> </a> </li>
-            </ul>
-        </nav>
+        <div class="">
+            <nav>
+                <ul class=" nav_links">
+                    <!--<li class="nav-item active"><a href="#about">About Me</a></li>-->
+                    <!--<li><a href="#skills">Skills</a></li>-->
+                    <li> <a href="#work"> <nav_color>My work</nav_color> </a> </li>
+                    <li> <a href="profile/profile.html"> <nav_color>   Profile Photo  </nav_color> </a> </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="d-flex justify-content-around ">
+
+            <h1>Zion Wong<i class="fa fa-linkedin-square" aria-hidden="true" style="font-size:30px;"></i></a> </h1>
+
+        </div>
+        
     </header>
+
     <br>
 
     <!--about me-->
     <div class="about_me">
         <h1>About Me</h1>
-            <p class="abt_me_txt">Welcome to Zion's webpage. Hopefully this website will get to know me better.
+        <br>
+        
+        <p class="abt_me_txt">Welcome to Zion's webpage. Hopefully this website will get to know me better.
         I am a software engineer currently living in London. My favorite subject is mathematics since primary school. I discovered interesting to implement programs to reflect the images on the computer monitor. After studying computer science, I discovered programming not just related images, but also algorithms and data transfers. I like to read the data flow and design from a different platform. It heightened my curiosity and passion about software engineering.
         I have a professional background in developing mobile apps in the United States. I arrived in the United Kingdom in 2020 and I would like to obtain a job opportunity related to computer science in the United Kingdom. My dream is to become an expert programmer. In my leisure time, I like to discover old console games and skiing.  </p>
     </div>
